6th june - 10.24pm

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!--javascript/s-->
     <script src="js/reserve.js"></script>
     <script src="js/payment.js"></script>
+    <script src="nav.js"></script>
 </head>
 
 
@@ -40,8 +41,8 @@
     <nav class="navbar">
 
         <!--hamburger menu for small screen-->
-        <div class="hamburger-icon">
-            <a href="hamburger.html"><img class="white-hamburgericon" src="assets/icons/hamburger.png" alt="Hamburger Menu"></a>
+        <div class="hamburger">
+            <img class="white-hamburgericon" src="assets/icons/hamburger.png" alt="Hamburger Menu">
         </div>
 
         <!--pages-->
@@ -62,8 +63,18 @@
             <a href="search.html"><img class="white-searchicon" src="assets/icons/search_icon_white.png" alt="Search"></a>
         </div>
     </nav>
-</header>
 
+    
+    <nav>
+        <ul class="dropdown open">
+            <li><a class="ham-pages" href="food.html">Food</a></li>
+            <li><a class="ham-pages" href="drinks.html">Drinks</a></li>
+            <li><a class="ham-pages" href="reserve.html">Reserve</a></li>
+            <li><a class="ham-pages" href="about.html">About</a></li>
+        </ul>
+    </nav>
+
+</header>
 
 
 <body>
