--- a/food.html
+++ b/food.html
@@ -98,14 +98,14 @@
     </div>
 
     <!--Drop down filter icon-->
-    <div class="grid-system filter-container">
+    <div class="filter-1">
         <button class="filter-button" onclick="toggleDropdown()">Filter</button>
         <div class="filter-menu" id="filterMenu">
           <a href="filtered.html">Vegetarian</a>
           <a href="filtered.html">Seafood</a>
           <a href="filtered.html">Beef</a>
         </div>
-      </div>
+    </div>
 
             <!--for in-page-navbar-->
             <!--used this as a way to go around the navbar-->
