--- a/search.html
+++ b/search.html
@@ -89,7 +89,8 @@
 
         <h1>Search:</h1> 
 
-        <input type="text" id="searchbar">
+        <input type="text" id="searchbar" onkeydown="press(event)">
+        
     </div>  
 
 
