--- a/reserve.payment.html
+++ b/reserve.payment.html
@@ -41,8 +41,8 @@
     <nav class="navbar">
 
         <!--hamburger menu for small screen-->
-        <div class="hamburger-icon">
-            <a href="hamburger.html"><img class="white-hamburgericon" src="assets/icons/hamburger.png" alt="Hamburger Menu"></a>
+        <div class="hamburger">
+            <img class="white-hamburgericon" src="assets/icons/hamburger.png" alt="Hamburger Menu">
         </div>
 
         <!--pages-->
@@ -62,6 +62,16 @@
         <div class="nav-search">
             <a href="search.html"><img class="white-searchicon" src="assets/icons/search_icon_white.png" alt="Search"></a>
         </div>
+    </nav>
+
+    
+    <nav>
+        <ul class="dropdown open">
+            <li><a class="ham-pages" href="food.html">Food</a></li>
+            <li><a class="ham-pages" href="drinks.html">Drinks</a></li>
+            <li><a class="ham-pages" href="reserve.html">Reserve</a></li>
+            <li><a class="ham-pages" href="about.html">About</a></li>
+        </ul>
     </nav>
 </header>
 
