--- a/drinks.html
+++ b/drinks.html
@@ -63,7 +63,7 @@
         </div>
     </nav>
 
-    
+            <!--hamburger drop down menu-->
     <nav>
         <ul class="dropdown open">
             <li><a class="ham-pages" href="food.html">Food</a></li>
@@ -120,6 +120,8 @@
 
         <h2 id="drinks-header">Sparkling</h2>
     
+
+            <!--contents-->
         <div class="drink-item section-1">
             <dl>
                 <dt>"En Vie" by Helens Hill</dt>
@@ -162,6 +164,7 @@
 
         <h2 id="drinks-header">White</h2>
 
+                    <!--contents-->
         <div class="drink-item section-1">
             <dl>
                 <dt>21 Isabey Sauvignon Blanc</dt>
@@ -204,7 +207,7 @@
 
         <h2  id="drinks-header">Cocktails</h2>
 
-
+            <!--contents-->
         <div class="drink-item section-1">
             <dl>
                 <dt>Lila</dt>
@@ -289,6 +292,7 @@
     </section>
 
 
+                <!--contents-->
     <!--Soft Drinks-->
     <section id="soft" class="grid-system">
 
