--- a/food.html
+++ b/food.html
@@ -41,8 +41,8 @@
     <nav class="navbar">
 
         <!--hamburger menu for small screen-->
-        <div class="hamburger-icon">
-            <a href="hamburger.html"><img class="white-hamburgericon" src="assets/icons/hamburger.png" alt="Hamburger Menu"></a>
+        <div class="hamburger">
+            <img class="white-hamburgericon" src="assets/icons/hamburger.png" alt="Hamburger Menu">
         </div>
 
         <!--pages-->
@@ -62,6 +62,16 @@
         <div class="nav-search">
             <a href="search.html"><img class="white-searchicon" src="assets/icons/search_icon_white.png" alt="Search"></a>
         </div>
+    </nav>
+
+        <!--hamburger drop down menu-->
+    <nav>
+        <ul class="dropdown open">
+            <li><a class="ham-pages" href="food.html">Food</a></li>
+            <li><a class="ham-pages" href="drinks.html">Drinks</a></li>
+            <li><a class="ham-pages" href="reserve.html">Reserve</a></li>
+            <li><a class="ham-pages" href="about.html">About</a></li>
+        </ul>
     </nav>
 </header>
 
@@ -128,12 +138,13 @@
         <hr class="in-page-nav-line">
     </div>
 
-    
+
      <!--Specials-->
      <section id="specials" class="grid-system">
 
         <h2 class="food-h2">Specials</h2>
 
+                    <!--contents-->
             <figure id="item-grid-1">
                 <a href="product.html" class="figure-link">
                     <img class="food-image" data-category="seafood" src="assets/food/menu_sides_01.jpg" alt="tarak scallop">
@@ -183,6 +194,7 @@
 
     <h2 class="food-h2">Entree</h2>
 
+                <!--contents-->
         <figure id="item-grid-1">
             <a href="product.html" class="figure-link">
                 <img class="food-image" data-category="seafood" src="assets/food/menu_entree_01.jpg" alt="rock oysters">
@@ -212,6 +224,7 @@
 
         <h2 class="food-h2">Sides</h2>
 
+                    <!--contents-->
         <figure id="item-grid-1">
             <a href="product.html" class="figure-link">
                 <img class="food-image" data-category="seafood" src="assets/food/menu_sides_01.jpg" alt="tarak scallop">
@@ -261,6 +274,7 @@
 
         <h2 class="food-h2">Mains</h2>
 
+                    <!--contents-->
         <figure id="item-grid-1">
             <a href="product.html" class="figure-link">
                 <img class="food-image" data-category="seafood" src="assets/food/menu_mains_01.jpg" alt="john dory">
@@ -319,6 +333,7 @@
 
         <h2 class="food-h2">Dessert</h2>
 
+                    <!--contents-->
         <figure id="item-grid-1">
             <a href="product.html" class="figure-link">
                 <img class="food-image" data-category="vegetarian" src="assets/food/menu_dessert_01.jpg" alt="charcoal merengue">
