--- a/reserve.payment.html
+++ b/reserve.payment.html
@@ -64,7 +64,7 @@
         </div>
     </nav>
 
-    
+        <!--hamburger drop down menu-->
     <nav>
         <ul class="dropdown open">
             <li><a class="ham-pages" href="food.html">Food</a></li>
