--- a/search.html
+++ b/search.html
@@ -63,7 +63,7 @@
         </div>
     </nav>
 
-    
+    <!--hamburger drop down menu-->
     <nav>
         <ul class="dropdown open">
             <li><a class="ham-pages" href="food.html">Food</a></li>
